fixed dark mode switch

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,62 @@ body {
   background-color: white;
 }
 
+.app-container{
+  margin-bottom: 5vh;
+}
+
+.switch {
+  display: flex;
+  font-family: "Unbounded", sans-serif;
+  align-items: center;
+  margin-top: -7vh;
+  margin-left: 13vw;
+}
+
+#light .switch label {
+  color: black;
+}
+
+#dark .switch label {
+  color: white;
+}
+
+#dark {
+  background-color: #0C1618;
+  transition: 1s ease-in;
+}
+
+#dark nav .links a.nav-a{
+  color: white;
+}
+
+#dark .i-am-zack,
+.se {
+  z-index: 2;
+  color: white;
+}
+
+#dark .sliding-text{
+  color: white;
+}
+
+#dark .logo {
+  background-color: white;
+  border-radius: 50%;
+}
+
+.react-switch-bg {
+  height: 35px;
+  width: 3.5vw;
+  margin: 0px;
+  position: relative;
+  background: rgb(242, 237, 237);
+  border-radius: 14px;
+  cursor: pointer;
+  transition: background 0.25s ease 0s;
+  padding-left: 5px;
+}
+
 @media (max-width: 430px) {
   body {
     background-image: none;
