--- a/src/Pages/NavBar/navbar.css
+++ b/src/Pages/NavBar/navbar.css
@@ -1,39 +1,3 @@
-#light .switch label {
-  color: black;
-}
-
-#dark .switch label {
-  color: white;
-}
-
-#dark {
-  background-color: #342d1f;
-}
-
-#dark a {
-  color: white;
-}
-
-#dark .line {
-  color: white;
-}
-
-#dark .lottie {
-  position: relative;
-  z-index: 1;
-}
-
-#dark .i-am-zack,
-.se {
-  z-index: 2;
-}
-
-#dark .logo {
-  background-color: rgba(255, 255, 255, 0.63);
-  border-radius: 50%;
-  margin-left: 10px;
-}
-
 nav {
   display: flex;
   align-items: center;
@@ -48,13 +12,6 @@ nav {
   display: flex;
   flex-direction: row;
   gap: 1vw;
-}
-
-.switch {
-  display: flex;
-  font-family: "Unbounded", sans-serif;
-  align-items: center;
-  gap: 10px;
 }
 
 .logo {
@@ -73,18 +30,6 @@ a.nav-a {
 a.nav-a:hover {
   background-color: rgba(232, 231, 231, 0.534);
   transition: 0.2s;
-}
-
-.react-switch-bg {
-  height: 28px;
-  width: 3.5vw;
-  margin: 0px;
-  position: relative;
-  background: rgb(242, 237, 237);
-  border-radius: 14px;
-  cursor: pointer;
-  transition: background 0.25s ease 0s;
-  padding-left: 5px;
 }
 
 @keyframes floating {
