--- a/src/Pages/Works/works.css
+++ b/src/Pages/Works/works.css
@@ -62,7 +62,7 @@
   background-color: white;
   height: 60vh;
   border-radius: 50px;
-  margin-top: 10px;
+  margin-top: 5vh;
   background: url("https://images.unsplash.com/photo-1635776063328-153b13e3c245?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 }
 
